# vq_encoder_decoder

./: .gitignore  Dockerfile  README.md  codebook_extraction.py  config.yaml  data.py  data_test.py  evaluation.py  generate_contactmap_fromCATHPDB.py  inference.py  inference_cifar.py  inference_contact.py  inference_decode.py  inference_distance_mds.py  inference_embed.py  inference_encode.py  install.sh  install_conda.sh  install_conda_gcpnet.sh  install_conda_gvp.sh  install_pip.sh  install_pip_gvp.sh  model.py  test_distance_map_mds.py  test_gvp_modules.py  train.py  train_cifar.py  train_contact.py  train_distance_map.py  train_egnn.py  train_gcpnet.py  train_gvp.py  train_se3.py  train_vqvae_test.py  utils.py
codebook_evaluation/: evaluate_codebook_perplexity.py  (+5 more)
gcp-vqvae/: README.md  pyproject.toml
gcp-vqvae/gcp_vqvae/: __init__.py  gcp_vqvae.py
gcp-vqvae/gcp_vqvae/_internal/data/: dataset.py
gcp-vqvae/gcp_vqvae/_internal/demo/: dataset.py
gcp-vqvae/gcp_vqvae/_internal/models/: decoders.py  protein_encoder.py  super_model.py
gcp-vqvae/gcp_vqvae/_internal/models/gcpnet/features/: edge_features.py  node_features.py  representation.py  sequence_features.py  utils.py
gcp-vqvae/gcp_vqvae/_internal/models/gcpnet/models/: base.py  utils.py
gcp-vqvae/gcp_vqvae/_internal/models/gcpnet/models/graph_encoders/: gcpnet.py
gcp-vqvae/gcp_vqvae/_internal/models/gcpnet/models/graph_encoders/components/: radial.py  wrappers.py
gcp-vqvae/gcp_vqvae/_internal/models/gcpnet/models/graph_encoders/layers/: gcp.py
gcp-vqvae/gcp_vqvae/_internal/utils/: utils.py
(+209 files in other folders)
